--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -34,6 +34,7 @@
   }
 
   .logo-size{
+    /* height: 326px; */
     height: 326px;
   }
 
@@ -41,6 +42,10 @@
     -webkit-animation: scale-in-center 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
             animation: scale-in-center 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
   }
+
+  .footer .container p {
+    margin: 0;
+}
 
  @-webkit-keyframes scale-in-center {
   0% {
